# hactl_companion

./: .gitignore  AGENT.md  COMPANION_IMPL_PLAN.md  COMPANION_PLAN.md  COMPANION_PLAN.vold.history  Dockerfile  HACTL_INTEGRATION.md  IMPLEMENTATION.md  Makefile  README.md  config.yaml  docker-compose.integration.yaml  docker-compose.wireguard.yaml  pyproject.toml  run.sh
.github/: dependabot.yml  release.yml
.github/workflows/: ci.yml  dependabot-automerge.yml  monthly-release.yml  patch-release.yml  release.yml
docs/: install_hactl_companion.md  testing.md  wireguard.md
openapi/: companion-v1.yaml
src/companion/: __init__.py  __main__.py  openapi.py  server.py  yaml_resolver.py
src/companion/routes/: __init__.py  automations.py  config.py  ha.py  ha_cli.py  health.py  helpers.py  logs.py  scripts.py  supervisor.py  templates.py  wireguard.py
src/hactl_companion.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
testdata/fixtures/: automations.yaml  configuration.yaml  counter.yaml  input_boolean.yaml  input_number.yaml  scripts.yaml  template.yaml
testdata/wireguard/: Dockerfile.wg-server  server-entrypoint.sh
tests/: conftest.py  test_auth.py  test_automations.py  test_cli.py  test_config.py  test_config_write.py  test_ha.py  test_ha_cli.py  test_health.py  test_helpers.py  test_logs.py  test_openapi.py  test_resolver.py  test_scripts.py  test_supervisor.py  test_templates.py  test_wireguard.py
tests/integration/: conftest.py  test_auth.py  test_live.py  test_no_supervisor.py  test_wireguard.py
translations/: en.yaml
